--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/daily_tv_ranking_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/daily_tv_ranking_main_layout.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@drawable/list_item_divider"
-        android:dividerHeight="1dp">
+        android:listSelector="@drawable/channel_list_item_selector"
+        android:dividerHeight="@dimen/video_contents_divider_divider_height">
     </ListView>
 
 </LinearLayout>
