--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
@@ -5,6 +5,12 @@
     android:background="@color/home_main_background_color"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/home_main_layout_progress_bar_Layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
