DREM-1282 [その他](その他作業)TabUIの共通化リファクタ
実装見直し・修正
TabUIを使用する全画面に適用、タブ周りのレイアウト調整
・DREM-1411 [実装]([DREM-35]レイアウト指示書の適用)マイ番組表
・DREM-1394 [実装]([DREM-35]レイアウト指示書の適用)録画番組
・DREM-1391 [実装]([DREM-35]レイアウト指示書の適用)クリップ一覧
・DREM-1393 [実装]([DREM-35]レイアウト指示書の適用)おすすめ番組・ビデオ
・DREM-1410 [実装]([DREM-35]レイアウト指示書の適用)チャンネル一覧
・DREM-1408 [実装]([DREM-35]レイアウト指示書の適用)週間テレビランキング
・DREM-1407 [実装]([DREM-35]レイアウト指示書の適用)ビデオランキング
・DREM-1404 [実装]([DREM-35]レイアウト指示書の適用)コンテンツ詳細画面

Change-Id: Ifc5a167f78c2fe518404b80354197c4a360450ff

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/clip_list_main.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/clip_list_main.xml
@@ -3,19 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <HorizontalScrollView
-        android:id="@+id/clip_hs_tab_strip_scroll"
+    <RelativeLayout
+        android:id="@+id/rl_clip_list_tab"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@android:color/background_dark"
-        android:fillViewport="true"
-        android:foregroundGravity="center_horizontal"
-        android:scrollbars="none" />
+        android:layout_height="@dimen/tab_layout_area_height"
+        android:background="@color/common_tab_background_color"
+        android:visibility="visible" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_clip_result"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/clip_hs_tab_strip_scroll" />
+        android:layout_below="@id/rl_clip_list_tab" />
 
 </RelativeLayout>
