--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
@@ -10,10 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/recorded_searchview_height"
         android:layout_marginBottom="@dimen/recorded_searchview_bottom_margin"
-        android:layout_marginLeft="@dimen/recorded_searchview_left_margin"
-        android:layout_marginRight="@dimen/recorded_searchview_right_margin"
+        android:layout_marginStart="@dimen/recorded_searchview_left_margin"
+        android:layout_marginEnd="@dimen/recorded_searchview_right_margin"
         android:layout_marginTop="@dimen/recorded_searchview_top_margin"
         android:background="@color/keyword_search_background" />
+
+    <RelativeLayout
+        android:id="@+id/rl_recorded_list_tab"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/tab_layout_area_height"
+        android:background="@color/common_tab_background_color"
+        android:visibility="visible" />
 
     <!-- 検索結果画面 -->
     <RelativeLayout
@@ -22,21 +29,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <HorizontalScrollView
-            android:id="@+id/record_list_main_layout_scroll"
-            style="@style/tabTextView"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/recorded_scroll_height"
-            android:fillViewport="true"
-            android:foregroundGravity="center_horizontal"
-            android:scrollbars="none" />
-
         <ProgressBar
             android:id="@+id/record_list_main_layout_progress"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/record_list_main_layout_scroll"
             android:layout_centerHorizontal="true" />
 
         <android.support.v4.view.ViewPager
