--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -187,20 +187,26 @@
     <dimen name="recorded_filtering_icon_margin_end">5dp</dimen>
 
     <!--タブ共通UI-->
-    <dimen name="list_tab_start_margin_left">20dp</dimen>
-    <dimen name="list_tab_margin_left">16dp</dimen>
-    <dimen name="list_tab_margin_top">0dp</dimen>
-    <dimen name="list_tab_margin_right">0dp</dimen>
-    <dimen name="list_tab_margin_bottom">0dp</dimen>
-    <dimen name="list_tab_margin_right_last">16dp</dimen>
-    <dimen name="list_tab_padding_left">0dp</dimen>
-    <dimen name="list_tab_padding_top">0dp</dimen>
-    <dimen name="list_tab_padding_right">0dp</dimen>
-    <dimen name="list_tab_padding_bottom">0dp</dimen>
-    <dimen name="list_tab_text_area_height">30dp</dimen>
-    <dimen name="list_tab_text_size">15sp</dimen>
-    <dimen name="list_tab_scroll_area_height">50dp</dimen>
-    <dimen name="list_tab_scroll_area_padding_top">20dp</dimen>
+    <dimen name="search_tab_margin_left">16dp</dimen>
+    <dimen name="search_tab_margin_top">0dp</dimen>
+    <dimen name="search_tab_margin_right">0dp</dimen>
+    <dimen name="search_tab_margin_bottom">0dp</dimen>
+    <dimen name="search_tab_margin_right_last">16dp</dimen>
+    <dimen name="recorded_list_tab_margin_left">16dp</dimen>
+    <dimen name="recorded_list_tab_margin_top">0dp</dimen>
+    <dimen name="recorded_list_tab_margin_right">0dp</dimen>
+    <dimen name="recorded_list_tab_margin_bottom">0dp</dimen>
+    <dimen name="tab_layout_padding_zero">0dp</dimen>
+    <dimen name="search_tab_text_area_height">30dp</dimen>
+    <dimen name="tab_text_size_15dp">15dp</dimen>
+    <dimen name="tab_text_size_14dp">14dp</dimen>
+    <dimen name="tab_layout_area_channel_list_height">52dp</dimen>
+    <dimen name="tab_layout_area_program_list_height">52dp</dimen>
+    <dimen name="tab_layout_area_height">51dp</dimen>
+    <dimen name="tab_scroll_area_height">50dp</dimen>
+    <dimen name="tab_scroll_area_padding_top">20dp</dimen>
+    <dimen name="search_tab_scroll_area_padding_top">21dp</dimen>
+    <dimen name="tab_indicator_size">1dp</dimen>
 
     <!--リモコン-->
     <dimen name="remote_controller_header_view_high">50dp</dimen>
