DREM-1393 [実装]([DREM-35]レイアウト指示書の適用)おすすめ番組・ビデオ
ゲリットでご指摘いただいた点を修正しました。(修正前の状態でマージは行われていたので、Amend commitではありません)

Change-Id: I3f9e34db8de8a9c2f1a7302a3eec226039f088d8

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_recommend_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_recommend_content.xml
@@ -12,9 +12,9 @@
 		android:id="@+id/lv_recommend_list"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_marginTop="5dp"
+		android:layout_marginTop="@dimen/list_item_time_start_margin"
 		android:divider="@drawable/list_item_divider"
-		android:dividerHeight="1dp">
+		android:dividerHeight="@dimen/list_divider_height">
 	</ListView>
 
 	<!-- 201804対応 並べ替え/絞り込みボタン
